# srt-flow

./: .env.example  .gitignore  AGENTS.md  CI_CD_PLAN.md  Makefile  PLAN-job-debuggability.md  PLAN.md  README.md  REFACTOR_PLAN.md  note.md  pyproject.toml  simple_5_lines.srt
.githooks/: pre-push
.github/workflows/: ci.yml
docs/: google-ads-test-plan.md  legal-compliance-research.md  pre-launch-review.md
docs/design/: 01-architecture.md  02-auth-admin.md  03-billing.md  04-credits-metering.md  05-srt-processing.md  06-jobs.md  07-analytics.md  08-seo.md  README.md
docs/legal/: privacy-policy.md  terms-of-service.md
docs/plans/: MLX_PLATFORM_MIGRATION.md  PHASE_B_HANDOFF.md  admin-tool-sqladmin.md  analytics-plan.md  auth-billing-status.md  bilingual-srt-upload.md  billing-account-page.md  guest-studio-live-demo.md  home-pricing-section.md  job-failure-handling.md  pricing-plan.md  seo.md  srt-upload-hardening.md
ops/: README.md  deploy.env.example
ops/launchd/: com.brettbot.brbot-router.plist
pkg-translator/: pyproject.toml
pkg-translator/src/pkg_translator/: app.py  template.txt  validation.py
pkg-translator/tests/: test_api.py
scripts/: deploy.sh  drive_translation.py  gen_test_srt.py
srt-backend/: .env.example  DESIGN.md  README.md  note.md  pyproject.toml  sample.srt
srt-backend/pkg-auth/: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
srt-backend/pkg-auth/src/pkg_auth/: __init__.py  api.py  config.py  dependencies.py  google.py  models.py  router.py  state.py  tokens.py
srt-backend/pkg-auth/tests/: test_access_allowlist.py  test_admin_config.py  test_api.py  test_google_jwks.py  test_tokens.py
srt-backend/pkg-billing/: README.md  pyproject.toml
srt-backend/pkg-billing/src/pkg_billing/: __init__.py  api.py  config.py  signing.py  store.py
srt-backend/pkg-billing/tests/: test_api.py
srt-backend/pkg-file-upload/: AGENTS.md  README.md  pyproject.toml
srt-backend/pkg-file-upload/src/pkg_file_upload/: __init__.py  api.py
srt-backend/pkg-file-upload/tests/: test_api.py  test_local_storage.py
srt-backend/pkg-job-orch/: AGENTS.md  README.md  pyproject.toml
srt-backend/pkg-job-orch/src/pkg_job_orch/: __init__.py  api.py  config.py  credits.py  db.py  erasure.py  events.py  models.py  orchestration.py  retention.py  routes.py  routes_db.py  worker_client.py  workers.py
srt-backend/pkg-job-orch/src/pkg_job_orch/migrations/: env.py
srt-backend/pkg-job-orch/src/pkg_job_orch/migrations/versions/: 0001_initial.py  0002_users_google_sub_processed_events.py  0003_job_debug_fields.py  0004_job_filename.py  0005_job_target_progress.py  0006_credit_ledger.py  0007_job_carried_langs.py  0008_ledger_receipt_url.py  0009_event_table.py  0010_job_failure_detail.py
srt-backend/pkg-job-orch/tests/: conftest.py  test_api.py  test_db_route.py  test_default_worker_client.py  test_enqueue.py  test_models.py  test_retention.py  test_worker_client.py  test_workers.py
srt-backend/pkg-llm-backend/: AGENTS.md  README.md  pyproject.toml
srt-backend/pkg-llm-backend/src/pkg_llm_backend/: api.py  backend.py  config.py  llm.py
srt-backend/pkg-llm-backend/tests/: test_config.py  test_llm.py
srt-backend/pkg-notification/: README.md  pyproject.toml
srt-backend/pkg-notification/src/pkg_notification/: __init__.py  api.py
srt-backend/pkg-notification/tests/: test_api.py
srt-backend/pkg-srt-services/: README.md  pyproject.toml
srt-backend/pkg-srt-services/src/pkg_srt_services/: __init__.py  api.py
srt-backend/pkg-srt-services/tests/: test_api.py
srt-backend/pkg-translator/: pyproject.toml
srt-backend/pkg-translator/src/pkg_translator/: __init__.py  api.py  config.py  languages.yaml  prompts.py  translator.py
srt-backend/src/srt_backend/: __init__.py  admin.py  app.py  app_store.py  detection.py  forwarded.py  jobs.py  routes_account.py  routes_events.py  routes_health.py  routes_srt.py  routes_translate.py  routes_workers.py  translation.py  workers.py
srt-backend/tests/: conftest.py  test_account_route.py  test_admin.py  test_auth_route.py  test_billing_route.py  test_deploy_script.py  test_detection.py  test_events.py  test_fixture_matrix.py  test_forwarded.py  test_health_route.py  test_jobs_route.py  test_parse_route.py  test_prepare_route.py  test_pricing_plan.py  test_restart_recovery.py  test_retention_route.py  test_static_frontend.py  test_translate_route.py  test_workers.py  test_workers_route.py
srt-cloud-worker/: README.md  pyproject.toml  reference.py
srt-cloud-worker/src/srt_cloud_worker/: __init__.py  api.py  app.py  config.py  llm.py  server.py  translator.py  validation.py
srt-cloud-worker/tests/: test_api.py  test_config.py  test_e2e_real_worker.py
srt-cloud-worker/tests/reports/: srt_cloud_worker_e2e_report.md
srt-frontend/: .gitignore  DESIGN.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
srt-frontend/public/: robots.txt  site.webmanifest
srt-frontend/scripts/: prerender.mjs
srt-frontend/src/: App.tsx  AuthScreen.tsx  BillingScreen.test.tsx  BillingScreen.tsx  ConfigureScreen.tsx  ConsentBanner.tsx  CuesView.tsx  DbScreen.tsx  DecisionModal.tsx  DemoProcessing.tsx  FailureCard.test.tsx  FailureCard.tsx  JobsScreen.tsx  LandingScreen.tsx  LegalLinks.tsx  ProcessingScreen.tsx  ResultsScreen.tsx  StackedOutput.component.test.tsx  StackedOutput.test.ts  StackedOutput.tsx  TranslatePage.tsx  UploadFlow.tsx  analytics.ts  api.ts  clientStorage.ts  components.test.tsx  components.tsx  consent.ts  contentPages.tsx  demoFixtures.test.tsx  demoFixtures.ts  demoLine.ts  errorCopy.ts  fileEntry.test.ts  fileEntry.ts  hooks.test.tsx  hooks.ts  index.css  languages.ts  legal.ts  (+10 more)
srt-mlx-worker/: README.md  pyproject.toml
srt-mlx-worker/src/srt_mlx_worker/: __init__.py  api.py  app.py  config.py  llm.py  models.py  prompt.txt  prompts.py  server.py  srt.py  translator.py  validation.py
srt-mlx-worker/tests/: test_api.py  test_e2e_real_worker.py
srt-mlx-worker/tests/reports/: srt_mlx_worker_e2e_report.md
test_files/matrix/: README.md
(+30 files in other folders)
