[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "srt-backend"
description = "srt-flow FastAPI mono-app."
authors = [{ name = "Brett" }]
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
  "fastapi>=0.116.0",
  "hanzidentifier>=1.3.0",
  "httpx2>=2.5.0",
  "lingua-language-detector>=2.2.0",
  "pkg-file-upload",
  "pkg-job-orch",
  "pkg-srt-services",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "build>=1.2.0",
  "pyright>=1.1.400",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.11.0",
]

[tool.uv.sources]
pkg-file-upload = { path = "pkg-file-upload" }
pkg-job-orch = { path = "pkg-job-orch" }
pkg-srt-services = { path = "pkg-srt-services" }

[tool.hatch.build.targets.wheel]
packages = ["src/srt_backend"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
# Test fakes intentionally use Any for the worker-client signature.
"tests/**/*.py" = ["ANN401"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
