[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "srt-backend"
description = "srt-flow FastAPI mono-app."
authors = [{ name = "Brett" }]
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
  "fastapi>=0.116.0",
  "hanzidentifier>=1.3.0",
  "httpx>=0.28.0",
  "itsdangerous>=2.2.0",
  "lingua-language-detector>=2.2.0",
  "openai>=1.40.0",
  "pkg-auth",
  "pkg-billing",
  "pkg-file-upload",
  "pkg-job-orch",
  "pkg-llm-backend",
  "pkg-srt-services",
  "pkg-translator",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.20",
  "sqladmin>=0.29.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "build>=1.2.0",
  "httpx2>=2.5.0",
  "pyright>=1.1.400",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.11.0",
]

[tool.uv.sources]
pkg-auth = { workspace = true }
pkg-billing = { workspace = true }
pkg-file-upload = { workspace = true }
pkg-job-orch = { workspace = true }
pkg-llm-backend = { workspace = true }
pkg-srt-services = { workspace = true }
pkg-translator = { workspace = true }

[tool.uv.workspace]
members = [
  "pkg-auth",
  "pkg-billing",
  "pkg-file-upload",
  "pkg-job-orch",
  "pkg-llm-backend",
  "pkg-srt-services",
  "pkg-translator",
]

[tool.hatch.build.targets.wheel]
packages = ["src/srt_backend"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
