[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "srt-mlx-worker"
description = "API service for translating SRT subtitles with MLX."
readme = "README.md"
authors = [{ name = "Brett" }]
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
  "fastapi>=0.116.0",
  "pkg-translator",
  "pydantic>=2.11.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
mlx = [
  "mlx>=0.18,<0.31",
  "mlx-lm>=0.18,<0.29",
  "transformers>=4.57,<5",
]

[project.scripts]
srt-mlx-worker = "srt_mlx_worker.server:main"

[dependency-groups]
dev = [
  "build>=1.2.0",
  "httpx2>=2.5.0",
  "pyright>=1.1.400",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.uv.sources]
pkg-translator = { path = "../pkg-translator", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/srt_mlx_worker"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "e2e: real end-to-end tests that start service processes and may load local models",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
