[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pkg-billing"
description = "Internal billing package."
readme = "README.md"
authors = [{ name = "Brett" }]
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
  "fastapi>=0.116.0",
  "pkg-auth",
  "pydantic-settings>=2.10.0",
  "stripe>=12.0.0",
]

[dependency-groups]
dev = [
  "build>=1.2.0",
  "pyright>=1.1.400",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.uv.sources]
pkg-auth = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/pkg_billing"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src", "tests"]
venvPath = ".."
venv = ".venv"
