[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pkg-job-orch"
description = "Internal job orchestration package (Job model + worker_loop + router)."
readme = "README.md"
authors = [{ name = "Brett" }]
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "pkg-file-upload",
  "pkg-srt-services",
  "pydantic-settings>=2.10.0",
  "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
  "build>=1.2.0",
  "pyright>=1.1.400",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.11.0",
]

[tool.uv.sources]
pkg-file-upload = { workspace = true }
pkg-srt-services = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/pkg_job_orch"]

# Migrations ship inside the package directory (src/pkg_job_orch/migrations/)
# so the default wheel target already bundles env.py, script.py.mako, and
# versions/*.py. No force-include needed.

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src", "tests"]
venvPath = ".."
venv = ".venv"
exclude = [
  "src/pkg_job_orch/migrations/script.py.mako",
]
